CMAKE_MINIMUM_REQUIRED(VERSION 2.8.3)
PROJECT(atl_configs)

IF (CMAKE_COMPILER_IS_GNUCXX)
    ADD_DEFINITIONS(-std=gnu++0x)
ENDIF()

# DEPENDENCIES
FIND_PACKAGE(catkin)

# BUILD AS CATKIN PACKAGE
CATKIN_PACKAGE()

# INSTALL CONFIG FILES
SET(SHARE_DEST ${CATKIN_PACKAGE_SHARE_DESTINATION})
INSTALL(DIRECTORY configs/ DESTINATION ${SHARE_DEST}/configs)
