<?xml version="1.0"?>
<package>
  <name>atl_core</name>
  <version>0.0.1</version>
  <description>ATL core package</description>

  <!-- contact info -->
  <maintainer email="chutsu@gmail.com">Chris Choi</maintainer>
  <maintainer email="stan.j.brown@gmail.com">Stan Brown</maintainer>

  <!-- build dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>

  <!-- license -->
  <license>LGPLv3</license>
</package>
